[package]
name = "wolf3D-wasm"
version = "0.1.0"
authors = ["Nhyarlathotep"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.37"
serde_json = "1.0.41"
serde_derive = "^1.0.59"

wee_alloc = { version = "0.4.2", optional = true }

[dependencies.wasm-bindgen]
version = "0.2.63"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3.37"
features = [
  'console',
  'ImageData',
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlElement',
  'Window',
]

[profile.release]
lto = true
